--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Joehoel/pong#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "global": "^4.4.0",
+    "nodemon": "^2.0.3",
     "socket.io": "^2.3.0"
   }
 }
